samples/_failures_safe/1761725799_c3dd92_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_60ef72d4.c: In function ‘main’:
./samples/SAFE/__tmp_60ef72d4.c:149:25: error: missing terminating " character
  149 |         fprintf(stderr, "Decompression
      |                         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_60ef72d4.c:149:9: error: expected expression at end of input
  149 |         fprintf(stderr, "Decompression
      |         ^~~~~~~
./samples/SAFE/__tmp_60ef72d4.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_60ef72d4.c:149:9: error: expected declaration or statement at end of input
